2002-02-17  Duco Fijma  <duco@lorentz.xs4all.nl>
	* Guid.cs: added stub for Guid(string) ctor

2002-02-17  Duncan Mak  <duncan@ximian.com>

	* Convert.cs: Near-complete implementation of Convert.cs

	Added all the To* methods taking (object) and
	(object, IFormatProvider) as parameters.

	Added [CLSCompliant (false)] attributes to methods dealing with
	unsigned types.

	Added the missing section on converting to and from DateTime. Only
	6 missing methods, all marked with MonoTODOs. Will tackle them later.		

2002-02-16  Duncan Mak  <duncan@ximian.com>

	* TimeZone.cs: patch from Ajay Kumar Dwivedi (adwiv@yahoo.com) to
	make IsDaylightSavingTime (DateTime) call 
	IsDaylightSavingTime (DateTime, DaylightTime).	
	
	Added internal class CurrentTimeZone from Ajay. It needs more work
	to fill in the appropriate internal calls.
	
Sat Feb 16 12:41:41 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Type.cs: fix IsClass.

Sat Feb 16 12:02:02 CET 2002 Paolo Molaro <lupus@ximian.com>

	* String.cs: fix Trim().

Fri Feb 15 21:02:46 CET 2002 Paolo Molaro <lupus@ximian.com>

	* String.cs: fix more off by one errors.

Thu Feb 14 18:54:09 CET 2002 Paolo Molaro <lupus@ximian.com>

	* MonoType.cs: fix IsValueTypeImpl.
	* Type.cs: fix IsEnum. Implement Equals methods.

Wed Feb 13 21:50:13 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Int32.cs: implement IConvertible interface.
	
2002-02-12  Duncan Mak  <duncan@ximian.com>

	* TimeZone.cs: Implemented and added to CVS.

2002-02-11  Duncan Mak  <duncan@ximian.com>

	* Convert.cs: Implemented the ChangeType () methods.

Mon Feb 11 19:48:58 CET 2002 Paolo Molaro <lupus@ximian.com>

	* Array.cs: make Clone() an internal call.

2002-02-09  Duco Fijma <duco@lorentz.xs4all.nl>
	* Changed Guid.NewGuid so that it can use both System.Random and 
          System.Security.Cryptography.RandomNumberGenerator

2002-02-09  Duco Fijma <duco@lorentz.xs4all.nl>
	* First version of Guid.NewGuid

2002-02-08  Duncan Mak  <duncan@ximian.com>
