@@ -1,3 +1,9 @@
+2002-02-17  Duncan Mak  <duncan@ximian.com>
+
+        * TimeZone.cs:	Applied the rest of Ajay's patch for	
+        IsDaylightSavingTime. Thanks a lot for the nice explanation of how
+        it works!
+
 2002-02-17  Duco Fijma  <duco@lorentz.xs4all.nl>
 	* Guid.cs: added stub for Guid(string) ctor
 
